--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Eric&amp;rsquo;s Blog</title>
+<title>Eric's Blog</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.0">
@@ -23,7 +23,7 @@
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-Eric&amp;rsquo;s Blog
+Eric's Blog
 </a>
 <div class="flex-l items-center">
 <div class=ananke-socials>
@@ -43,7 +43,7 @@ This is not the page you were looking for
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://erichsu.github.io>
-&copy; Eric&rsquo;s Blog 2022
+&copy; Eric's Blog 2022
 </a>
 <div>
 <div class=ananke-socials>
