--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Eric&amp;rsquo;s Blog</title>
+<title>Eric's Blog</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Eric&amp;rsquo;s Blog">
-<link href=/index.xml rel=feed type=application/rss+xml title="Eric&amp;rsquo;s Blog">
-<meta property="og:title" content="Eric&amp;rsquo;s Blog">
+<link href=/index.xml rel=alternate type=application/rss+xml title="Eric's Blog">
+<link href=/index.xml rel=feed type=application/rss+xml title="Eric's Blog">
+<meta property="og:title" content="Eric's Blog">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://erichsu.github.io/">
-<meta itemprop=name content="Eric&amp;rsquo;s Blog">
+<meta itemprop=name content="Eric's Blog">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Eric&amp;rsquo;s Blog">
+<meta name=twitter:title content="Eric's Blog">
 <meta name=twitter:description content>
 </head>
 <body class="ma0 avenir bg-near-white">
@@ -25,7 +25,7 @@
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-Eric&amp;rsquo;s Blog
+Eric's Blog
 </a>
 <div class="flex-l items-center">
 <div class=ananke-socials>
@@ -35,7 +35,7 @@ Eric&amp;rsquo;s Blog
 </nav>
 <div class="tc-l pv3 ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-Eric&amp;rsquo;s Blog
+Eric's Blog
 </h1>
 </div>
 </div>
@@ -47,7 +47,7 @@ Eric&amp;rsquo;s Blog
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://erichsu.github.io>
-&copy; Eric&rsquo;s Blog 2022
+&copy; Eric's Blog 2022
 </a>
 <div>
 <div class=ananke-socials>
