--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Eric's Blog</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
-<meta name=generator content="Hugo 0.92.0">
+<meta name=generator content="Hugo 0.92.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
 <link href=/index.xml rel=alternate type=application/rss+xml title="Eric's Blog">
@@ -79,6 +79,8 @@ My First Post
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+This is Eric&rsquo;s Blog - putting some notes or develper murmur here. I am mainly an iOS App developer, also coding in NodeJS / ReactJS from time to time.
+Welcome to send invitation on LinkedIn or Twitter.
 </div>
 <a href=/posts/my-first-post/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
